// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/flashMessages renders a flash message with high severity 1`] = `
<div>
  <div
    class="FlashMessages high flashIn"
  >
    Mock Content
  </div>
</div>
`;

exports[`components/flashMessages renders a flash message with low severity 1`] = `
<div>
  <div
    class="FlashMessages low flashIn"
  >
    Mock Content
  </div>
</div>
`;

exports[`components/flashMessages renders a flash message with low severity and check onClick on flash works 1`] = `
<div>
  <div
    class="FlashMessages low flashOut"
  >
    Mock Content
  </div>
</div>
`;

exports[`components/flashMessages renders a flash message with low severity and custom HTML in flash message 1`] = `
<div>
  <div
    class="FlashMessages low flashIn"
  >
    <div
      data-testid="mock-test-id"
    >
      Mock Content
    </div>
  </div>
</div>
`;

exports[`components/flashMessages renders a flash message with normal severity 1`] = `
<div>
  <div
    class="FlashMessages normal flashIn"
  >
    Mock Content
  </div>
</div>
`;
